--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
-* { margin: 0; padding: 0; font-family: 'Poppins', sans-serif; box-sizing: border-box; }
-body { background: #222; display: flex; justify-content: center; align-items: center; height: 100vh; }
-.card { background: linear-gradient(135deg, #00feba, #5b548a); color: #fff; padding: 40px 35px; border-radius: 20px; text-align: center; }
-.search { display: flex; align-items: center; justify-content: space-between; }
-input { border: 0; outline: 0; background: #ebfffc; color: #555; padding: 10px 25px; height: 40px; border-radius: 30px; margin-right: 10px; }
-button { border: 0; outline: 0; background: #ebfffc; border-radius: 50%; width: 40px; height: 40px; cursor: pointer; }
-.weather h1 { font-size: 60px; margin-top: 10px; }
-.details { display: flex; justify-content: space-between; padding: 0 20px; margin-top: 30px; }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Weather Forecast App</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="card">
+        <div class="search">
+            <input type="text" placeholder="Enter city name" spellcheck="false">
+            <button>Search</button>
+        </div>
+        <div class="weather">
+            <h1 class="temp">--°c</h1>
+            <h2 class="city">City Name</h2>
+        </div>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
