--- a/index.html
+++ b/index.html
@@ -3,20 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather Forecast App</title>
+    <title>Pro Weather Dashboard</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="card">
         <div class="search">
             <input type="text" placeholder="Enter city name" spellcheck="false">
-            <button>Search</button>
+            <button><img src="https://cdn-icons-png.flaticon.com/512/482/482631.png" style="width: 20px;"></button>
         </div>
+        
         <div class="weather">
+            <p id="date-time">Loading Date...</p>
+            <img src="https://cdn-icons-png.flaticon.com/512/4064/4064276.png" class="weather-icon">
             <h1 class="temp">--°c</h1>
-            <h2 class="city">City Name</h2>
+            <h2 class="city">Search a City</h2>
+            <p id="weather-desc">Condition</p>
+
+            <div class="details">
+                <div class="col">
+                    <img src="https://cdn-icons-png.flaticon.com/512/4148/4148401.png">
+                    <div>
+                        <p class="humidity">--%</p>
+                        <p>Humidity</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <img src="https://cdn-icons-png.flaticon.com/512/2011/2011448.png">
+                    <div>
+                        <p class="wind">-- km/h</p>
+                        <p>Wind Speed</p>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="aqi-container">
+                <p>Air Quality Index (AQI): <span id="aqi-val">--</span></p>
+            </div>
         </div>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
